--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       <div class="container my-4">
         <div class="jumbotron">
             <h2 class="display-4">Current Time Is: <span id="time"></span></h2>
-            <p class="lead">We have got you covered. This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+            <p class="lead">This is our Digital Clock.This clock displays current time, date with month and year also.</p>
             <hr class="my-4">
             <p>We are here to show to you different time according to your countries.</p>
             <a class="btn btn-primary btn-md" href="#" role="button">Browse Time</a>
